--- a/.gitignore
+++ b/.gitignore
@@ -25,8 +25,9 @@ project.fragment.lock.json
 # Datenbanken
 *.mdf
 *.ldf
-.db-shm
-.db-wal
+# SQLite-Datenbank-Temporärdateien
+reservations.db-shm
+reservations.db-wal
 
 # Umgebungsvariablen und Secrets
 *.env
